🌈 Modal customize and add identity

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script src="https://kit.fontawesome.com/0bfe0e9acc.js" crossorigin="anonymous"></script>
 
     <title>WEALTH HEALTH</title>
   </head>
